package app.controller;

import app.domain.model.*;
import com.nhs.report.Report2NHS;

import java.time.Duration;
import java.time.LocalDate;
import java.time.Period;
import java.util.List;

public class ReportController {





}
